--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -24,33 +24,32 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="61dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="112dp"
-            android:layout_marginBottom="354dp"
+            android:layout_width="123dp"
+            android:layout_height="21dp"
+            android:layout_marginStart="57dp"
+            android:layout_marginTop="31dp"
+            android:layout_marginBottom="52dp"
             android:text="Categoria"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="132dp"
+            android:layout_height="21dp"
             android:layout_marginStart="112dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="85dp"
-            android:layout_marginBottom="354dp"
+            android:layout_marginTop="31dp"
+            android:layout_marginEnd="150dp"
+            android:layout_marginBottom="56dp"
             android:text="Dificultad"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.0" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
